--- a/InventoryManagementSystem.csproj
+++ b/InventoryManagementSystem.csproj
@@ -16,7 +16,11 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="Devart.Data" Version="6.0.21" />
+    <PackageReference Include="Devart.Data.MySql" Version="9.3.21" />
+    <PackageReference Include="Devart.Data.MySql.EF6" Version="9.3.21" />
+    <PackageReference Include="Devart.Data.MySql.Linq" Version="5.1.21" />
+    <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="EntityFramework.zh-Hans" Version="6.2.0" />
     <PackageReference Include="MySql.Data" Version="9.0.0" />
     <PackageReference Include="WPF-UI" Version="3.0.5" />
